座右铭添加

--- a/index.html
+++ b/index.html
@@ -33,25 +33,14 @@
     <!-- 第1屏：欢迎页 -->
     <section class="fullpage-section section-hero">
       <div class="section-content">
-        <h1 class="animate-title">👋 你好，我是张靖宇</h1>
-        <p class="animate-subtitle">一位专注于 <strong>UE 插件开发</strong> 与 <strong>Python 自动化</strong> 的自由开发者</p>
-        <p class="animate-subtitle delay-1">擅长插件架构、AI 交互、VR 模拟等前沿方向</p>
-        <div class="animate-fade delay-2">
-          <div class="stats-grid">
-            <div class="stat-item">
-              <div class="stat-number" id="age">27</div>
-              <div class="stat-label">岁</div>
-            </div>
-            <div class="stat-item">
-              <div class="stat-number" id="experience">7</div>
-              <div class="stat-label">年经验</div>
-            </div>
-            <div class="stat-item">
-              <div class="stat-number">10+</div>
-              <div class="stat-label">项目经验</div>
-            </div>
-          </div>
+        <!-- 座右铭 -->
+        <div class="motto animate-motto">
+          <span class="motto-text">"所有复杂，皆可封装；所有重复，皆可自动化"</span>
         </div>
+
+        <h1 class="animate-title">你好，我是 <span class="name-highlight">梦之殇魂</span></h1>
+        <p class="animate-subtitle">一个专注于 Unreal Engine 插件开发的独立开发者</p>
+        <p class="animate-subtitle delay-1">致力于将复杂问题简单化，让重复工作自动化</p>
       </div>
     </section>
 
@@ -75,15 +64,17 @@
           </div>
 
           <div class="info-card animate-slide-right">
-            <h3>个人优势</h3>
+            <h3>核心技能</h3>
             <ul class="advantage-list">
               <li>精通 C++ 编程，扎实的数学、数据结构和算法基础</li>
-              <li>深入理解 TCP/IP 协议，熟练开发 UE 网络插件</li>
-              <li>精通 Python，擅长自动化与工具开发</li>
-              <li>熟练 MySQL、Oracle 等数据库</li>
-              <li>熟悉 ChatGPT、前端 AI 技术</li>
-              <li>精通 Git / SVN / Perforce</li>
+              <li>深入理解 TCP/IP 协议，具备开发和使用相关 UE 插件经验</li>
+              <li>精通 Python，大量脚本开发经验，擅长自动化与工具开发</li>
+              <li>熟练 MySQL、Oracle 等数据库，具备高效数据处理能力</li>
+              <li>熟练 VS、Rider 等开发工具，拥有丰富的调试与开发经验</li>
+              <li>熟悉 ChatGPT、前端 AI 技术，可结合 AI 提升开发效率</li>
+              <li>精通 Git / SVN / Perforce，具备服务器配置与权限管理经验</li>
               <li>熟悉 VR 全套设备（Vive、Oculus、Pico 等）</li>
+              <li class="learning-note">💡 <em>仍在不断学习中...</em></li>
             </ul>
           </div>
         </div>
@@ -94,6 +85,7 @@
     <section class="fullpage-section section-skills">
       <div class="section-content">
         <h2 class="section-title">🚀 技能专长</h2>
+        <p class="skills-subtitle">深耕 UE 插件开发与 Python 自动化领域</p>
 
         <div class="skills-grid">
           <div class="skill-card animate-fade delay-0">
@@ -139,6 +131,10 @@
               <li>引擎源码修改经验</li>
             </ul>
           </div>
+        </div>
+
+        <div class="skills-footer">
+          <p class="learning-statement">💡 保持好奇心，<strong>仍在不断学习中...</strong></p>
         </div>
       </div>
     </section>
