技能专长优化

--- a/index.html
+++ b/index.html
@@ -83,58 +83,122 @@
 
     <!-- 第3屏：技能专长 -->
     <section class="fullpage-section section-skills">
-      <div class="section-content">
+      <div class="section-content scrollable">
         <h2 class="section-title">🚀 技能专长</h2>
-        <p class="skills-subtitle">深耕 UE 插件开发与 Python 自动化领域</p>
+        <p class="skills-subtitle">以 Unreal Engine 为核心，辐射多个技术领域</p>
 
-        <div class="skills-grid">
-          <div class="skill-card animate-fade delay-0">
-            <div class="skill-icon">🎮</div>
-            <h3>Unreal Engine</h3>
-            <ul>
-              <li>深入了解 UE4 / UE5 流程</li>
-              <li>精通 Gameplay 框架与 VR 项目架构</li>
-              <li>丰富插件开发与二次开发经验</li>
-              <li>熟悉蓝图脚本、网络同步、性能优化</li>
-            </ul>
+        <div class="skills-list">
+          <!-- UE核心技能 -->
+          <div class="skill-item skill-core">
+            <div class="skill-icon-large">🎮</div>
+            <div class="skill-content">
+              <h3>Unreal Engine</h3>
+              <p class="skill-desc">核心专长 · 插件开发专家</p>
+              <div class="skill-tags">
+                <span>UE4 / UE5</span>
+                <span>Gameplay框架</span>
+                <span>插件开发</span>
+                <span>VR项目</span>
+                <span>网络同步</span>
+                <span>性能优化</span>
+                <span>源码修改</span>
+                <span>MetaHuman</span>
+                <span>LiveLink</span>
+              </div>
+            </div>
           </div>
 
-          <div class="skill-card animate-fade delay-1">
-            <div class="skill-icon">🐍</div>
-            <h3>Python 自动化</h3>
-            <ul>
-              <li>大量脚本开发经验</li>
-              <li>后端架构设计能力</li>
-              <li>自动化工具开发</li>
-              <li>AI 服务集成（ChatGLM、Whisper）</li>
-            </ul>
+          <!-- Python -->
+          <div class="skill-item">
+            <div class="skill-icon-large">🐍</div>
+            <div class="skill-content">
+              <h3>Python</h3>
+              <p class="skill-desc">精通Python编程，大量脚本开发与自动化经验</p>
+              <div class="skill-tags">
+                <span>自动化工具</span>
+                <span>后端服务</span>
+                <span>数据处理</span>
+                <span>AI集成</span>
+              </div>
+            </div>
           </div>
 
-          <div class="skill-card animate-fade delay-2">
-            <div class="skill-icon">🥽</div>
-            <h3>VR / 虚拟拍摄</h3>
-            <ul>
-              <li>熟悉 MetaHuman / MassAI</li>
-              <li>虚拟拍摄技术实践</li>
-              <li>SteamVR、HTC 设备集成</li>
-              <li>LiveLink 实时传输</li>
-            </ul>
+          <!-- 网络编程 -->
+          <div class="skill-item">
+            <div class="skill-icon-large">🌐</div>
+            <div class="skill-content">
+              <h3>网络编程</h3>
+              <p class="skill-desc">深入理解TCP/IP协议，熟练开发网络插件</p>
+              <div class="skill-tags">
+                <span>TCP / UDP</span>
+                <span>HTTP / FTP</span>
+                <span>SSH</span>
+                <span>WebSocket</span>
+              </div>
+            </div>
           </div>
 
-          <div class="skill-card animate-fade delay-3">
-            <div class="skill-icon">🔧</div>
-            <h3>开发工具</h3>
-            <ul>
-              <li>VS、Rider 开发调试</li>
-              <li>Git 版本控制专家</li>
-              <li>Windows / Android 打包</li>
-              <li>引擎源码修改经验</li>
-            </ul>
+          <!-- 开发工具 -->
+          <div class="skill-item">
+            <div class="skill-icon-large">🛠️</div>
+            <div class="skill-content">
+              <h3>开发工具</h3>
+              <p class="skill-desc">熟练使用各类IDE与调试工具，丰富的开发经验</p>
+              <div class="skill-tags">
+                <span>Visual Studio</span>
+                <span>Rider</span>
+                <span>调试优化</span>
+                <span>性能分析</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- 版本控制 -->
+          <div class="skill-item">
+            <div class="skill-icon-large">📚</div>
+            <div class="skill-content">
+              <h3>版本控制</h3>
+              <p class="skill-desc">精通多种版本管理系统，具备服务器配置与权限管理经验</p>
+              <div class="skill-tags">
+                <span>Git</span>
+                <span>SVN</span>
+                <span>Perforce</span>
+                <span>服务器配置</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- VR开发 -->
+          <div class="skill-item">
+            <div class="skill-icon-large">🥽</div>
+            <div class="skill-content">
+              <h3>VR 开发</h3>
+              <p class="skill-desc">熟悉VR全套设备，能快速部署与优化VR环境</p>
+              <div class="skill-tags">
+                <span>Vive</span>
+                <span>Oculus</span>
+                <span>Pico</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- AI技术 -->
+          <div class="skill-item">
+            <div class="skill-icon-large">🤖</div>
+            <div class="skill-content">
+              <h3>AI 技术</h3>
+              <p class="skill-desc">熟悉多种AI大模型，结合AI提升开发效率与产品智能化</p>
+              <div class="skill-tags">
+                <span>ChatGPT</span>
+                <span>Claude</span>
+                <span>Ollama</span>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="skills-footer">
-          <p class="learning-statement">💡 保持好奇心，<strong>仍在不断学习中...</strong></p>
+          <p class="learning-statement"><strong>💡 仍在不断学习中...</strong></p>
         </div>
       </div>
     </section>
