--- a/index.html
+++ b/index.html
@@ -47,35 +47,61 @@
     <!-- 第2屏：个人简介 -->
     <section class="fullpage-section section-about">
       <div class="section-content">
-        <h2 class="section-title">📌 个人简介</h2>
+        <h2 class="section-title">👨‍💻 关于我</h2>
 
-        <div class="info-grid">
-          <div class="info-card animate-slide-left">
-            <h3>基础信息</h3>
-            <ul class="info-list">
-              <li><span class="label">姓名：</span><span class="value">张靖宇</span></li>
-              <li><span class="label">性别：</span><span class="value">男</span></li>
-              <li><span class="label">年龄：</span><span class="value"><span id="age-info">27</span> 岁</span></li>
-              <li><span class="label">籍贯：</span><span class="value">山西运城</span></li>
-              <li><span class="label">工作经验：</span><span class="value"><span id="exp-info">7</span> 年</span></li>
-              <li><span class="label">毕业院校：</span><span class="value">重庆电子工程职业学院</span></li>
-              <li><span class="label">专业：</span><span class="value">嵌入式技术与应用</span></li>
-            </ul>
+        <div class="about-card">
+          <div class="about-header">
+            <div class="avatar-placeholder">
+              <span class="avatar-icon">🎮</span>
+            </div>
+            <div class="about-intro">
+              <h3 class="about-name">张靖宇 <span class="nickname">/ 梦之殇魂</span></h3>
+              <p class="about-title">Unreal Engine 插件开发工程师</p>
+              <p class="about-motto">"所有复杂，皆可封装；所有重复，皆可自动化"</p>
+            </div>
           </div>
 
-          <div class="info-card animate-slide-right">
-            <h3>核心技能</h3>
-            <ul class="advantage-list">
-              <li>精通 C++ 编程，扎实的数学、数据结构和算法基础</li>
-              <li>深入理解 TCP/IP 协议，具备开发和使用相关 UE 插件经验</li>
-              <li>精通 Python，大量脚本开发经验，擅长自动化与工具开发</li>
-              <li>熟练 MySQL、Oracle 等数据库，具备高效数据处理能力</li>
-              <li>熟练 VS、Rider 等开发工具，拥有丰富的调试与开发经验</li>
-              <li>熟悉 ChatGPT、前端 AI 技术，可结合 AI 提升开发效率</li>
-              <li>精通 Git / SVN / Perforce，具备服务器配置与权限管理经验</li>
-              <li>熟悉 VR 全套设备（Vive、Oculus、Pico 等）</li>
-              <li class="learning-note">💡 <em>仍在不断学习中...</em></li>
-            </ul>
+          <div class="about-content">
+            <div class="about-section">
+              <h4>🎯 职业概况</h4>
+              <p>7年+ Unreal Engine 开发经验，专注于插件开发与技术架构设计。从手游开发到军工仿真，从VR训练到AI数字人，积累了丰富的跨领域项目经验。擅长将复杂需求简化为可复用的技术模块，通过自动化工具提升团队效率。</p>
+            </div>
+
+            <div class="about-stats">
+              <div class="stat-box">
+                <div class="stat-value"><span id="exp-info">7</span>+</div>
+                <div class="stat-label">年开发经验</div>
+              </div>
+              <div class="stat-box">
+                <div class="stat-value">20+</div>
+                <div class="stat-label">项目经历</div>
+              </div>
+              <div class="stat-box">
+                <div class="stat-value">10+</div>
+                <div class="stat-label">开源插件</div>
+              </div>
+            </div>
+
+            <div class="about-section">
+              <h4>🎓 教育背景</h4>
+              <p><strong>重庆电子工程职业学院</strong> · 嵌入式技术与应用 · 2015-2018</p>
+            </div>
+
+            <div class="about-section">
+              <h4>💼 职业亮点</h4>
+              <ul class="highlight-list">
+                <li>主导驾考模拟器项目架构设计，成功接入MassAI、MetaHuman等前沿技术</li>
+                <li>改写UE引擎源码解决三屏Lumen渲染与曝光一致性问题</li>
+                <li>开发虚拟拍摄系统，支持LiveLink实时推流与多设备协同控制</li>
+                <li>构建AI数字人交互系统，本地部署完整AI对话流程</li>
+              </ul>
+            </div>
+
+            <div class="about-footer">
+              <span class="info-tag">📍 山西运城</span>
+              <span class="info-tag">💼 独立开发者</span>
+              <span class="info-tag">🌐 远程工作</span>
+            </div>
           </div>
         </div>
       </div>
