--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="about-stats">
               <div class="stat-box">
                 <div class="stat-value"><span id="exp-info">7</span>+</div>
-                <div class="stat-label">年开发经验</div>
+                <div class="stat-label">开发经验</div>
               </div>
               <div class="stat-box">
                 <div class="stat-value">20+</div>
@@ -91,7 +91,7 @@
               <h4>💼 职业亮点</h4>
               <ul class="highlight-list">
                 <li>主导驾考模拟器项目架构设计，成功接入MassAI、MetaHuman等前沿技术</li>
-                <li>改写UE引擎源码解决三屏Lumen渲染与曝光一致性问题</li>
+                <li>改写UE引擎源码解决三屏Lumen渲染GI反射失效问题</li>
                 <li>开发虚拟拍摄系统，支持LiveLink实时推流与多设备协同控制</li>
                 <li>构建AI数字人交互系统，本地部署完整AI对话流程</li>
               </ul>
