手机适配优化

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span class="motto-text">"所有复杂，皆可封装；所有重复，皆可自动化"</span>
         </div>
 
-        <h1 class="animate-title">你好，我是 <span class="name-highlight">梦之殇魂</span></h1>
+        <h1 class="animate-title">你好，我是 <span class="name-highlight">张靖宇</span></h1>
         <p class="animate-subtitle">一个专注于 Unreal Engine 插件开发的独立开发者</p>
         <p class="animate-subtitle delay-1">致力于将复杂问题简单化，让重复工作自动化</p>
       </div>
@@ -55,8 +55,8 @@
               <span class="avatar-icon">🎮</span>
             </div>
             <div class="about-intro">
-              <h3 class="about-name">张靖宇 <span class="nickname">/ 梦之殇魂</span></h3>
-              <p class="about-title">Unreal Engine 插件开发工程师</p>
+              <h3 class="about-name">张靖宇 <span class="nickname">/ 男 <span id="age-info">28</span>岁</span></h3>
+              <p class="about-title">Unreal Engine 开发工程师</p>
               <p class="about-motto">"所有复杂，皆可封装；所有重复，皆可自动化"</p>
             </div>
           </div>
@@ -64,7 +64,7 @@
           <div class="about-content">
             <div class="about-section">
               <h4>🎯 职业概况</h4>
-              <p>7年+ Unreal Engine 开发经验，专注于插件开发与技术架构设计。从手游开发到军工仿真，从VR训练到AI数字人，积累了丰富的跨领域项目经验。擅长将复杂需求简化为可复用的技术模块，通过自动化工具提升团队效率。</p>
+              <p>多年 Unreal Engine 开发经验，专注于插件开发与技术架构设计。从手游开发到军工仿真，从VR训练到AI数字人，积累了丰富的跨领域项目经验。擅长将复杂需求简化为可复用的技术模块，通过自动化工具提升团队效率。</p>
             </div>
 
             <div class="about-stats">
