--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
           <div class="about-content">
             <div class="about-section">
               <h4>🎯 职业概况</h4>
-              <p>多年 Unreal Engine 开发经验，专注于插件开发与技术架构设计。从手游开发到军工仿真，从VR训练到AI数字人，积累了丰富的跨领域项目经验。擅长将复杂需求简化为可复用的技术模块，通过自动化工具提升团队效率。</p>
+              <p>多年 Unreal Engine 开发经验，专注于<strong>插件开发与技术架构设计</strong>。擅长将复杂需求简化为可复用的技术模块，通过开发自动化工具提升团队效率。</p>
+              <p>项目经验覆盖<strong>手游开发、军工仿真、VR训练、模拟驾驶、虚拟拍摄、AI数字人</strong>等多个领域，具备丰富的跨行业技术落地能力。</p>
             </div>
 
             <div class="about-stats">
@@ -90,7 +91,6 @@
             <div class="about-section">
               <h4>💼 职业亮点</h4>
               <ul class="highlight-list">
-                <li>主导驾考模拟器项目架构设计，成功接入MassAI、MetaHuman等前沿技术</li>
                 <li>改写UE引擎源码解决三屏Lumen渲染GI反射失效问题</li>
                 <li>开发虚拟拍摄系统，支持LiveLink实时推流与多设备协同控制</li>
                 <li>构建AI数字人交互系统，本地部署完整AI对话流程</li>
