--- a/index.html
+++ b/index.html
@@ -407,26 +407,31 @@
 
         <div class="contact-container">
           <div class="contact-card animate-fade">
-            <div class="contact-icon">💼</div>
-            <h3>服务与合作</h3>
-            <p>可承接 UE 插件开发、蓝图转 C++、Python 自动化脚本与后端架构设计</p>
+            <div class="contact-icon">🎯</div>
+            <h3>核心服务</h3>
+            <p>UE 插件定制开发 · 蓝图脚本开发<br>
+            引擎版本升级 · 崩溃问题修复 · 性能优化</p>
           </div>
 
           <div class="contact-card animate-fade delay-1">
-            <div class="contact-icon">📝</div>
-            <h3>项目定制</h3>
-            <p>支持功能或周期定制，源码交付，可签 NDA 并提供持续维护</p>
+            <div class="contact-icon">🤝</div>
+            <h3>合作方式</h3>
+            <p>功能定制 · 周期定制 · 技术咨询<br>
+            源码交付 · 可签 NDA · 持续维护</p>
           </div>
 
           <div class="contact-card animate-fade delay-2">
             <div class="contact-icon">✉️</div>
             <h3>联系邮箱</h3>
-            <a href="mailto:mengzhishanghun@outlook.com" class="email-link">mengzhishanghun@outlook.com</a>
+            <p>
+              <a href="mailto:mengzhishanghun@outlook.com" class="email-link">mengzhishanghun@outlook.com</a><br>
+              <span class="contact-hint">通常24小时内回复 · 支持中英文沟通</span>
+            </p>
           </div>
         </div>
 
         <div class="contact-footer animate-fade delay-3">
-          <p>🤝 <strong>欢迎项目合作，期待与您共创价值！</strong></p>
+          <p>💡 <strong>让复杂问题简单化，让重复工作自动化 —— 期待与您合作！</strong></p>
         </div>
       </div>
     </section>
