--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- 第2屏：个人简介 -->
     <section class="fullpage-section section-about">
       <div class="section-content">
-        <h2 class="section-title">👨‍💻 关于我</h2>
+        <h2 class="section-title">👨‍💻 个人简介</h2>
 
         <div class="about-card">
           <div class="about-header">
@@ -119,7 +119,7 @@
             <div class="skill-icon-large">🎮</div>
             <div class="skill-content">
               <h3>Unreal Engine</h3>
-              <p class="skill-desc">核心专长 · 插件开发专家</p>
+              <p class="skill-desc">核心专长 · 多年Unreal Engine开发经验 · 插件开发专家</p>
               <div class="skill-tags">
                 <span>UE4 / UE5</span>
                 <span>Gameplay框架</span>
@@ -272,23 +272,24 @@
           <p class="job-title">Unreal 开发工程师</p>
 
           <div class="project-list-compact">
-            <div class="project-item">
-              <h4>北京航空301所 - 导弹演示系统</h4>
-              <p class="project-time">2021.07 - 2021.08</p>
-              <ul class="task-list-compact">
-                <li>构建交互式军事基地，展示导弹结构与发射流程</li>
-                <li>使用 Timeline + Niagara 模拟发射路径与爆炸效果</li>
-              </ul>
-            </div>
 
             <div class="project-item">
               <h4>沈阳航空601所 - 无人机航母演示</h4>
-              <p class="project-time">2024.05 - 2024.08</p>
+              <p class="project-time">2021.05 - 2021.08</p>
               <ul class="task-list-compact">
                 <li>使用 LevelSequence 录制无人机起降、补给、维修完整流程</li>
                 <li>制作高质量航母 VR 展示视频</li>
               </ul>
             </div>
+
+          <div class="project-item">
+              <h4>北京航空301所 - 导弹演示系统</h4>
+              <p class="project-time">2021.07 - 2021.08</p>
+              <ul class="task-list-compact">
+                  <li>构建交互式军事基地，展示导弹结构与发射流程</li>
+                  <li>使用 Timeline + Niagara 模拟发射路径与爆炸效果</li>
+              </ul>
+          </div>
 
             <div class="project-item">
               <h4>北京陆军航空兵学院 - VR 训练系统</h4>
@@ -331,8 +332,8 @@
               <ul class="task-list-compact">
                 <li>使用芬兰团队 XVP 车辆物理模型，模拟真实操作反馈</li>
                 <li>自研插件并接入 MassAI 和 MetaHuman，模拟真实路人环境</li>
-                <li>改写引擎源码以实现三屏 Lumen 正常显示并修复曝光不一致问题</li>
-                <li>成功接入 Common UI 模块，提升 UI 管理效率</li>
+                <li>改写引擎源码以实现三屏 Lumen GI 光反射失效、曝光不一致等问题</li>
+                <li>接入并改写 Common UI 模块，提升 UI 管理效率</li>
               </ul>
             </div>
 
@@ -340,9 +341,9 @@
               <h4>AI 数字人交互演示</h4>
               <p class="project-time">2023.03 - 2023.05</p>
               <ul class="task-list-compact">
-                <li>基于 MetaHuman + ChatGLM 构建数字人演示系统</li>
-                <li>本地部署完整 AI 流程（语音识别 → Chat → 语音合成）</li>
-                <li>结合 Kinect + ControlRig 实现人体姿态捕捉</li>
+                <li>基于 MetaHuman 构建数字人演示系统</li>
+                <li>本地部署完整 AI 流程（语音识别 → Chat → 文本转语音 -> 语音自动生成表情）</li>
+                <li>结合 Kinect + ControlRig 实现人体姿态捕捉以及数字人眼动追踪</li>
               </ul>
             </div>
 
@@ -351,7 +352,7 @@
               <p class="project-time">2024.05 - 2024.08</p>
               <ul class="task-list-compact">
                 <li>二次开发海洋插件，支持根据风力动态调整海浪参数</li>
-                <li>开发虚拟拍摄系统：结合 SteamVR、HTC、3D 打印控制器</li>
+                <li>开发虚拟拍摄系统：结合 HTC、3D 打印控制器实现海面摄像回放等功能</li>
                 <li>通过 LiveLink 将实时拍摄画面推送至平板供导演监控</li>
               </ul>
             </div>
