--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
       <span class="dot" data-index="1"></span>
       <span class="dot" data-index="2"></span>
       <span class="dot" data-index="3"></span>
-      <span class="dot" data-index="4"></span>
-      <span class="dot" data-index="5"></span>
-      <span class="dot" data-index="6"></span>
-      <span class="dot" data-index="7"></span>
     </div>
     <button class="nav-arrow nav-next" aria-label="下一页">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -48,8 +44,8 @@
       </div>
     </section>
 
-    <!-- 第2屏：个人简介 -->
-    <section class="fullpage-section section-about">
+    <!-- 第2屏：个人简介 + 技能专长 -->
+    <section class="fullpage-section section-about-skills">
       <div class="section-content">
         <h2 class="section-title">👨‍💻 个人简介</h2>
 
@@ -62,6 +58,12 @@
               <h3 class="about-name">张靖宇 <span class="nickname">/ 男 <span id="age-info">28</span>岁</span></h3>
               <p class="about-title">Unreal Engine 开发工程师</p>
               <p class="about-motto">"所有复杂，皆可封装；所有重复，皆可自动化"</p>
+              <div class="about-tags">
+                <span class="info-tag">⏱️ <span id="exp-years">7</span>年工作经验</span>
+                <span class="info-tag">📍 山西运城</span>
+                <span class="info-tag">💼 独立开发者</span>
+                <span class="info-tag">🌐 远程工作</span>
+              </div>
             </div>
           </div>
 
@@ -70,26 +72,6 @@
               <h4>🎯 职业概况</h4>
               <p>多年 Unreal Engine 开发经验，专注于<strong>插件开发与技术架构设计</strong>。擅长将复杂需求简化为可复用的技术模块，通过开发自动化工具提升团队效率。</p>
               <p>项目经验覆盖<strong>手游开发、军工仿真、VR训练、模拟驾驶、虚拟拍摄、AI数字人</strong>等多个领域，具备丰富的跨行业技术落地能力。</p>
-            </div>
-
-            <div class="about-stats">
-              <div class="stat-box">
-                <div class="stat-value"><span id="exp-info">7</span>+</div>
-                <div class="stat-label">开发经验</div>
-              </div>
-              <div class="stat-box">
-                <div class="stat-value">20+</div>
-                <div class="stat-label">项目经历</div>
-              </div>
-              <div class="stat-box">
-                <div class="stat-value">10+</div>
-                <div class="stat-label">开源插件</div>
-              </div>
-            </div>
-
-            <div class="about-section">
-              <h4>🎓 教育背景</h4>
-              <p><strong>重庆电子工程职业学院</strong> · 嵌入式技术与应用 · 2015-2018</p>
             </div>
 
             <div class="about-section">
@@ -101,29 +83,20 @@
               </ul>
             </div>
 
-            <div class="about-footer">
-              <span class="info-tag">📍 山西运城</span>
-              <span class="info-tag">💼 独立开发者</span>
-              <span class="info-tag">🌐 远程工作</span>
+            <div class="about-section">
+              <h4>🎓 教育背景</h4>
+              <p><strong>重庆电子科技职业大学</strong> · 嵌入式技术与应用 · 2015-2018</p>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <!-- 第3屏：技能专长 -->
-    <section class="fullpage-section section-skills">
-      <div class="section-content scrollable">
-        <h2 class="section-title">🚀 技能专长</h2>
-        <p class="skills-subtitle">以 Unreal Engine 为核心，辐射多个技术领域</p>
-
-        <div class="skills-list">
+            <!-- 技能专长部分 -->
+            <div class="about-section">
+              <h4>🚀 技能专长</h4>
+              <div class="skills-list">
           <!-- UE核心技能 -->
           <div class="skill-item skill-core">
             <div class="skill-icon-large">🎮</div>
             <div class="skill-content">
               <h3>Unreal Engine</h3>
-              <p class="skill-desc">核心专长 · 多年Unreal Engine开发经验 · 插件开发专家</p>
               <div class="skill-tags">
                 <span>UE4 / UE5</span>
                 <span>Gameplay框架</span>
@@ -143,7 +116,6 @@
             <div class="skill-icon-large">🐍</div>
             <div class="skill-content">
               <h3>Python</h3>
-              <p class="skill-desc">精通Python编程，大量脚本开发与自动化经验</p>
               <div class="skill-tags">
                 <span>自动化工具</span>
                 <span>后端服务</span>
@@ -158,7 +130,6 @@
             <div class="skill-icon-large">🌐</div>
             <div class="skill-content">
               <h3>网络编程</h3>
-              <p class="skill-desc">深入理解TCP/IP协议，熟练开发网络插件</p>
               <div class="skill-tags">
                 <span>TCP / UDP</span>
                 <span>HTTP / FTP</span>
@@ -173,7 +144,6 @@
             <div class="skill-icon-large">🛠️</div>
             <div class="skill-content">
               <h3>开发工具</h3>
-              <p class="skill-desc">熟练使用各类IDE与调试工具，丰富的开发经验</p>
               <div class="skill-tags">
                 <span>Visual Studio</span>
                 <span>Rider</span>
@@ -188,7 +158,6 @@
             <div class="skill-icon-large">📚</div>
             <div class="skill-content">
               <h3>版本控制</h3>
-              <p class="skill-desc">精通多种版本管理系统，具备服务器配置与权限管理经验</p>
               <div class="skill-tags">
                 <span>Git</span>
                 <span>SVN</span>
@@ -203,7 +172,6 @@
             <div class="skill-icon-large">🥽</div>
             <div class="skill-content">
               <h3>VR 开发</h3>
-              <p class="skill-desc">熟悉VR全套设备，能快速部署与优化VR环境</p>
               <div class="skill-tags">
                 <span>Vive</span>
                 <span>Oculus</span>
@@ -217,7 +185,6 @@
             <div class="skill-icon-large">🤖</div>
             <div class="skill-content">
               <h3>AI 技术</h3>
-              <p class="skill-desc">熟悉多种AI大模型，结合AI提升开发效率与产品智能化</p>
               <div class="skill-tags">
                 <span>ChatGPT</span>
                 <span>Claude</span>
@@ -225,18 +192,21 @@
               </div>
             </div>
           </div>
-        </div>
+              </div>
 
-        <div class="skills-footer">
-          <p class="learning-statement"><strong>💡 仍在不断学习中...</strong></p>
+              <div class="skills-footer">
+                <p class="learning-statement"><strong>💡 仍在不断学习中...</strong></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- 第4屏：工作经历 1 (2018-2021) -->
-    <section class="fullpage-section section-experience-1">
+    <!-- 第3屏：工作经历 -->
+    <section class="fullpage-section section-experience">
       <div class="section-content">
-        <h2 class="section-title">💼 工作经历 (1/3)</h2>
+        <h2 class="section-title">💼 工作经历</h2>
 
         <div class="work-period">2018.08 - 2021.02</div>
 
@@ -261,13 +231,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- 第5屏：工作经历 2 (2021-2023) -->
-    <section class="fullpage-section section-experience-2">
-      <div class="section-content">
-        <h2 class="section-title">💼 工作经历 (2/3)</h2>
 
         <div class="work-period">2021.07 - 2023.01</div>
 
@@ -314,13 +277,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- 第6屏：工作经历 3 (2023-2025) -->
-    <section class="fullpage-section section-experience-3">
-      <div class="section-content">
-        <h2 class="section-title">💼 工作经历 (3/3)</h2>
 
         <div class="work-period">2023.02 - 2025.01</div>
 
@@ -365,10 +321,10 @@
       </div>
     </section>
 
-    <!-- 第7屏：产品展示 -->
-    <section class="fullpage-section section-products">
+    <!-- 第4屏：产品展示 + 联系方式 -->
+    <section class="fullpage-section section-products-contact">
       <div class="section-content">
-        <h2 class="section-title">🎯 产品展示</h2>
+        <h2 class="section-title">🎯 产品展示 & 联系方式</h2>
 
         <p class="products-intro">现阶段专注于 Unreal Engine 插件和开源项目开发，已发布多款开源项目和商业插件</p>
 
@@ -399,16 +355,8 @@
           </a>
         </div>
 
-        <div class="products-footer">
-          <p>💡 <strong>持续更新中，更多优质插件和工具敬请期待</strong></p>
-        </div>
-      </div>
-    </section>
-
-    <!-- 第8屏：联系方式 -->
-    <section class="fullpage-section section-contact">
-      <div class="section-content">
-        <h2 class="section-title">📬 联系方式</h2>
+        <!-- 联系方式部分 -->
+        <h3 class="contact-section-title">📬 联系方式</h3>
 
         <div class="contact-container">
           <div class="contact-card animate-fade">
