工作经历页面修改

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <h4>🚀 技能专长</h4>
               <div class="skills-list">
           <!-- UE核心技能 -->
-          <div class="skill-item skill-core">
+          <div class="skill-item">
             <div class="skill-icon-large">🎮</div>
             <div class="skill-content">
               <h3>Unreal Engine</h3>
@@ -208,113 +208,112 @@
       <div class="section-content">
         <h2 class="section-title">💼 工作经历</h2>
 
-        <div class="work-period">2018.08 - 2021.02</div>
+        <div class="experience-card">
+          <div class="experience-content">
+            <!-- 第一家公司 -->
+            <div class="experience-section">
+              <h4>🏢 北京悠米互动娱乐科技有限公司</h4>
+              <p class="experience-meta">Unreal 开发工程师 <span class="work-period-inline">2018.08 - 2021.02</span></p>
 
-        <div class="company-card">
-          <h3 class="company-name">北京悠米互动娱乐科技有限公司</h3>
-          <p class="job-title">Unreal 开发工程师</p>
-
-          <div class="project-highlight">
-            <h4>《救赎之地》大逃杀MOBA手游</h4>
-            <p class="project-desc">客户端使用UE4，服务器使用自建C++游戏服务器</p>
-
-            <div class="responsibilities">
-              <p class="section-subtitle">主要职责</p>
-              <ul class="task-list">
-                <li>英雄技能模块：技能释放、冷却、隐藏、锁定逻辑</li>
-                <li>战斗伤害系统：伤害计算、死亡判定、减伤增伤机制</li>
-                <li>掉落系统：场景内掉落与拾取逻辑</li>
-                <li>交互系统：场景物品交互，如开门、开关、激活器等</li>
-                <li>坐骑系统：坐骑控制与角色同步机制</li>
-                <li>跳伞系统：实现单人 / 组队跳伞 + 同步跟随逻辑</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="work-period">2021.07 - 2023.01</div>
-
-        <div class="company-card">
-          <h3 class="company-name">北京弘宇飞拓科技有限公司 成都分公司</h3>
-          <p class="job-title">Unreal 开发工程师</p>
-
-          <div class="project-list-compact">
-
-            <div class="project-item">
-              <h4>沈阳航空601所 - 无人机航母演示</h4>
-              <p class="project-time">2021.05 - 2021.08</p>
-              <ul class="task-list-compact">
-                <li>使用 LevelSequence 录制无人机起降、补给、维修完整流程</li>
-                <li>制作高质量航母 VR 展示视频</li>
-              </ul>
+              <div class="project-list-compact">
+                <div class="project-item">
+                  <h5>《救赎之地》大逃杀MOBA手游</h5>
+                  <p class="project-time">2018.08 - 2021.02</p>
+                  <p class="project-desc-compact">客户端使用UE4，服务器使用自建C++游戏服务器</p>
+                  <ul class="task-list-compact">
+                    <li>英雄技能模块：技能释放、冷却、隐藏、锁定逻辑</li>
+                    <li>战斗伤害系统：伤害计算、死亡判定、减伤增伤机制</li>
+                    <li>掉落系统：场景内掉落与拾取逻辑</li>
+                    <li>交互系统：场景物品交互，如开门、开关、激活器等</li>
+                    <li>坐骑系统：坐骑控制与角色同步机制</li>
+                    <li>跳伞系统：实现单人 / 组队跳伞 + 同步跟随逻辑</li>
+                  </ul>
+                </div>
+              </div>
             </div>
 
-           <div class="project-item">
-              <h4>北京航空301所 - 导弹演示系统</h4>
-              <p class="project-time">2021.07 - 2021.08</p>
-              <ul class="task-list-compact">
-                  <li>构建交互式军事基地，展示导弹结构与发射流程</li>
-                  <li>使用 Timeline + Niagara 模拟发射路径与爆炸效果</li>
-              </ul>
-           </div>
+            <!-- 第二家公司 -->
+            <div class="experience-section">
+              <h4>🏢 北京弘宇飞拓科技有限公司 成都分公司</h4>
+              <p class="experience-meta">Unreal 开发工程师 <span class="work-period-inline">2021.07 - 2023.01</span></p>
 
-            <div class="project-item">
-              <h4>北京陆军航空兵学院 - VR 训练系统</h4>
-              <p class="project-time">2021.09 - 2022.09</p>
-              <ul class="task-list-compact">
-                <li>为教学课目编写训练逻辑，实现学员端与教员端联动控制</li>
-                <li>接入飞行模拟器数据、支持实时同步学员操作与心率监控</li>
-              </ul>
+              <div class="project-list-compact">
+                <div class="project-item">
+                  <h5>沈阳航空601所 - 无人机航母演示</h5>
+                  <p class="project-time">2021.05 - 2021.08</p>
+                  <ul class="task-list-compact">
+                    <li>使用 LevelSequence 录制无人机起降、补给、维修完整流程</li>
+                    <li>制作高质量航母 VR 展示视频</li>
+                  </ul>
+                </div>
+
+                <div class="project-item">
+                  <h5>北京航空301所 - 导弹演示系统</h5>
+                  <p class="project-time">2021.07 - 2021.08</p>
+                  <ul class="task-list-compact">
+                    <li>构建交互式军事基地，展示导弹结构与发射流程</li>
+                    <li>使用 Timeline + Niagara 模拟发射路径与爆炸效果</li>
+                  </ul>
+                </div>
+
+                <div class="project-item">
+                  <h5>北京陆军航空兵学院 - VR 训练系统</h5>
+                  <p class="project-time">2021.09 - 2022.09</p>
+                  <ul class="task-list-compact">
+                    <li>为教学课目编写训练逻辑，实现学员端与教员端联动控制</li>
+                    <li>接入飞行模拟器数据、支持实时同步学员操作与心率监控</li>
+                  </ul>
+                </div>
+
+                <div class="project-item">
+                  <h5>北京商飞 - 飞机模型演示系统</h5>
+                  <p class="project-time">2022.08 - 2023.01</p>
+                  <ul class="task-list-compact">
+                    <li>使用 DataTable + InstancedStaticMesh 实现飞机自动生成</li>
+                    <li>支持交互式参数修改与装备选择</li>
+                  </ul>
+                </div>
+              </div>
             </div>
 
-            <div class="project-item">
-              <h4>北京商飞 - 飞机模型演示系统</h4>
-              <p class="project-time">2022.08 - 2023.01</p>
-              <ul class="task-list-compact">
-                <li>使用 DataTable + InstancedStaticMesh 实现飞机自动生成</li>
-                <li>支持交互式参数修改与装备选择</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+            <!-- 第三家公司 -->
+            <div class="experience-section">
+              <h4>🏢 北京尼诺时空文化科技有限公司</h4>
+              <p class="experience-meta">Unreal 开发工程师 <span class="work-period-inline">2023.02 - 2025.01</span></p>
 
-        <div class="work-period">2023.02 - 2025.01</div>
+              <div class="project-list-compact">
+                <div class="project-item">
+                  <h5>驾考模拟器自主学习系统</h5>
+                  <p class="project-time">2023.02 - 2025.01</p>
+                  <p class="project-desc-compact">科目二三模拟考试教学系统，模拟教练教学帮助用户通过实际考试</p>
+                  <ul class="task-list-compact">
+                    <li>使用芬兰团队 XVP 车辆物理模型，模拟真实操作反馈</li>
+                    <li>自研插件并接入 MassAI 和 MetaHuman，模拟真实路人环境</li>
+                    <li>改写引擎源码以实现三屏 Lumen GI 光反射失效、曝光不一致等问题</li>
+                    <li>接入并改写 Common UI 模块，提升 UI 管理效率</li>
+                  </ul>
+                </div>
 
-        <div class="company-card">
-          <h3 class="company-name">北京尼诺时空文化科技有限公司</h3>
-          <p class="job-title">Unreal 开发工程师</p>
+                <div class="project-item">
+                  <h5>AI 数字人交互演示</h5>
+                  <p class="project-time">2023.03 - 2023.05</p>
+                  <ul class="task-list-compact">
+                    <li>基于 MetaHuman 构建数字人演示系统</li>
+                    <li>本地部署完整 AI 流程（语音识别 → Chat → 文本转语音 -> 语音自动生成表情）</li>
+                    <li>结合 Kinect + ControlRig 实现人体姿态捕捉以及数字人眼动追踪</li>
+                  </ul>
+                </div>
 
-          <div class="project-list-compact">
-            <div class="project-item">
-              <h4>驾考模拟器自主学习系统</h4>
-              <p class="project-time">2023.02 - 2025.01</p>
-              <p class="project-desc-compact">科目二三模拟考试教学系统，模拟教练教学帮助用户通过实际考试</p>
-              <ul class="task-list-compact">
-                <li>使用芬兰团队 XVP 车辆物理模型，模拟真实操作反馈</li>
-                <li>自研插件并接入 MassAI 和 MetaHuman，模拟真实路人环境</li>
-                <li>改写引擎源码以实现三屏 Lumen GI 光反射失效、曝光不一致等问题</li>
-                <li>接入并改写 Common UI 模块，提升 UI 管理效率</li>
-              </ul>
-            </div>
-
-            <div class="project-item">
-              <h4>AI 数字人交互演示</h4>
-              <p class="project-time">2023.03 - 2023.05</p>
-              <ul class="task-list-compact">
-                <li>基于 MetaHuman 构建数字人演示系统</li>
-                <li>本地部署完整 AI 流程（语音识别 → Chat → 文本转语音 -> 语音自动生成表情）</li>
-                <li>结合 Kinect + ControlRig 实现人体姿态捕捉以及数字人眼动追踪</li>
-              </ul>
-            </div>
-
-            <div class="project-item">
-              <h4>海洋船舶模拟系统</h4>
-              <p class="project-time">2024.05 - 2024.08</p>
-              <ul class="task-list-compact">
-                <li>二次开发海洋插件，支持根据风力动态调整海浪参数</li>
-                <li>开发虚拟拍摄系统：结合 HTC、3D 打印控制器实现海面摄像回放等功能</li>
-                <li>通过 LiveLink 将实时拍摄画面推送至平板供导演监控</li>
-              </ul>
+                <div class="project-item">
+                  <h5>海洋船舶模拟系统</h5>
+                  <p class="project-time">2024.05 - 2024.08</p>
+                  <ul class="task-list-compact">
+                    <li>二次开发海洋插件，支持根据风力动态调整海浪参数</li>
+                    <li>开发虚拟拍摄系统：结合 HTC、3D 打印控制器实现海面摄像回放等功能</li>
+                    <li>通过 LiveLink 将实时拍摄画面推送至平板供导演监控</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
